--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <div class="relative">
                         <div class="absolute -inset-4 bg-gradient-to-r from-primary/10 to-accent/10 rounded-3xl transform rotate-3"></div>
-                        <img src="images/img5.jpg"
+                        <img src="img5.jpg"
                             alt="Natural herbal products" class="relative rounded-3xl shadow-2xl w-full h-full object-cover" />
                     </div>
                 </div>
@@ -164,7 +164,7 @@
             <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 grid md:grid-cols-2 gap-12 items-center">
                 <div class="animate-fade-in relative">
                     <div class="absolute -inset-4 bg-gradient-to-b from-primary/10 to-accent/10 rounded-2xl transform -rotate-3"></div>
-                    <img src="images/img8.jpg"
+                    <img src="img8.jpg"
                         alt="Founder Musa Kokor" class="relative rounded-2xl shadow-xl w-full h-full object-cover" />
                 </div>
                 <div class="animate-fade-in" style="animation-delay: 200ms">
@@ -342,5 +342,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
