--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-4">
                 <a href="#" class="text-2xl font-extrabold tracking-tight flex items-center">
-                    <span style="color: var(--primary)">Musa</span><span style="color: var(--accent)">Kokor.</span>
+                    <span style="color: var(--primary)">Musa</span><span style="color: var(--accent)">Kokor 🍂</span>
                 </a>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#hero-section"
@@ -345,3 +345,4 @@
 
 
 </html>
+
